css/traffic.css
.viewport {
}

.road {
    background-image: url('../image/asphalt.jpg');
    width : 100%;
    height: 80px;
    position: relative;
}

.segments {
    position: absolute;
    top: 50%;
    height: 50%;
    width: 100%;
    border-color: white;
    border-style: dashed none none none;
    border-width: 3px;
}

.segment {
    display: inline-block;
    position: relative;
    top: 5%;
    width: 50px;
    height: 80%;
    vertical-align: top;
}

.segment:hover {
    background-color: rgba(255,0,0, 0.2);
}

.car {
}

.car img {
    position: relative;
    top: 20%;
    left: 5%;
    width: 80%;
}

.controls button {
    display: inline-block;
}

